# wifi-densepose

./: README.md
.claude-flow/metrics/: security-audit.json
rust-port/wifi-densepose-rs/.claude-flow/data/: pending-insights.jsonl
rust-port/wifi-densepose-rs/crates/ruv-neural/: Cargo.toml
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-cli/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-core/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-core/src/: graph.rs  rvf.rs  signal.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-decoder/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-embed/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-esp32/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-esp32/src/: adc.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-graph/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-memory/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-memory/benches/: benchmarks.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-memory/src/: hnsw.rs  persistence.rs  store.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-mincut/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-mincut/benches/: benchmarks.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-mincut/src/: spectral_cut.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-sensor/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-sensor/src/: nv_diamond.rs  opm.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-signal/: Cargo.toml  README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-signal/benches/: benchmarks.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-signal/src/: connectivity.rs  hilbert.rs  spectral.rs
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-viz/: README.md
rust-port/wifi-densepose-rs/crates/ruv-neural/ruv-neural-wasm/: README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/: README.md
rust-port/wifi-densepose-rs/crates/wifi-densepose-desktop/ui/.claude-flow/data/: pending-insights.jsonl
rust-port/wifi-densepose-rs/crates/wifi-densepose-sensing-server/src/: main.rs
