[package]
name = "ruv-neural-mincut"
description = "rUv Neural — Dynamic minimum cut analysis for brain network topology detection"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
wasm = []
sublinear = []  # Sublinear mincut algorithms

[dependencies]
ruv-neural-core = { workspace = true }
petgraph = { workspace = true }
ndarray = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
num-traits = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
