[package]
name = "ruv-neural-signal"
description = "rUv Neural — Signal processing: filtering, spectral analysis, artifact rejection for neural data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[features]
default = ["std"]
std = []
simd = []  # SIMD-accelerated processing

[dependencies]
ruv-neural-core = { workspace = true }
ndarray = { workspace = true }
rustfft = { workspace = true }
num-complex = { workspace = true }
num-traits = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true }
criterion = { workspace = true }

[[bench]]
name = "benchmarks"
harness = false
